--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "expo-media-library": "~16.0.3",
+    "expo-document-picker": "~12.0.1",
+    "expo-av": "~14.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
