--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.9",
     "expo-av": "~14.0.5",
     "expo-document-picker": "~12.0.1",
@@ -20,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "4.10.1",
@@ -27,7 +30,8 @@
     "react-native-svg": "^15.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
