--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-native-svg": "^15.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "react-native-svg-transformer": "^1.5.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
