--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "reactotron-react-native": "^5.1.8"
   },
   "private": true
 }
